--- a/learnNodejs/package.json
+++ b/learnNodejs/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www.js"
   },
+  "type": "module" ,
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
