--- a/expressMVC/package.json
+++ b/expressMVC/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "swagger": "node ./swagger.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -16,6 +17,8 @@
     "jest": "^29.7.0",
     "morgan": "~1.9.1",
     "supertest": "^6.3.3",
+    "swagger-autogen": "^2.23.6",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1"
   }
 }
