--- a/expressMVC/package.json
+++ b/expressMVC/package.json
@@ -9,7 +9,9 @@
     "swagger": "node ./swagger.js"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
+    "cheerio": "1.0.0-rc.12",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
