--- a/nestWithPostgreSql/package.json
+++ b/nestWithPostgreSql/package.json
@@ -25,6 +25,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.16",
     "@nestjs/typeorm": "^10.0.1",
     "@types/passport-jwt": "^3.0.13",
     "bcrypt": "^5.1.1",
@@ -35,6 +36,7 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1"
   },
