--- a/learnNodejs/package.json
+++ b/learnNodejs/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "start": "node ./bin/www.js"
   },
-  "type": "module" ,
+  "type": "module",
   "dependencies": {
+    "@nestjs/config": "^3.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
