--- a/learnNestMongo/.env
+++ b/learnNestMongo/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=mongodb+srv://123davidbill:gVtU66I65Du6TGea@mycluster.abcde.mongodb.net/mydatabasename?retryWrites=true&w=majority
+DATABASE_URL=`mongodb+srv://123davidbill:gVtU66I65Du6TGea@cluster0.mb2m7qr.mongodb.net/test?retryWrites=true&w=majority`
+
